# PyDPOCL

./: .gitignore  .pre-commit-config.yaml  Assignments.py  CompileReq.py  DGL  Element.py  ElementGraph.py  Flaws.py  GPlan.py  GlobalContainer.py  Graph.py  Ground.py  IntentionFrameGraph.py  OrderingGraph.py  ParsePrereqs.py  Plan.py  PlanElementGraph.py  Planner.py  Plannify.py  PyDPOCL.py  README.md  Relax.py  Restrictions.py  __init__.py  ark-domain.pddl  ark-domain_syntactic_sugar.pddl  ark-requirements-GL.txt  ark-requirements-result-bipocl.txt  backup_Gplan.py  clockdeco.py  d_add.txt  d_addHt.txt  d_add_c_minus_d.txt  d_add_div_depth.txt  d_add_subtrct_depth.txt  d_addht_rrp.txt  d_insrt.txt  d_insrt_c_minus_d.txt  d_insrt_div_depth.txt  d_insrt_subtrct_depth.txt  (+23 more)
Ground_Compiler_Library/: Element.py  ElementGraph.py  Flaws.py  GElm.py  Graph.py  Ground.py  OrderingGraph.py  PlanElementGraph.py  Planner.py  Plannify.py  Restrictions.py  __init__.py  ground_steps.txt  pddlToGraphs.py  precompile.py  travel_domain.travel-around0  travel_domain.travel-around1  travel_domain.travel-around10  travel_domain.travel-around100  travel_domain.travel-around1000  travel_domain.travel-around1001  travel_domain.travel-around1002  travel_domain.travel-around1003  travel_domain.travel-around1004  travel_domain.travel-around1005  travel_domain.travel-around1006  travel_domain.travel-around1007  travel_domain.travel-around1008  travel_domain.travel-around1009  travel_domain.travel-around101  travel_domain.travel-around1010  travel_domain.travel-around1011  travel_domain.travel-around1012  travel_domain.travel-around1013  travel_domain.travel-around1014  travel_domain.travel-around1015  travel_domain.travel-around1016  travel_domain.travel-around1017  travel_domain.travel-around1018  travel_domain.travel-around1019  (+2030 more)
Ground_Compiler_Library/domains/: ark-domain-decomp-three.pddl  ark-domain-decomp.pddl  ark-domain-hierarch.pddl  ark-domain.pddl  ark-problem-decomp-two.pddl  ark-problem-hierarch.pddl  h1.pddl  h1p1.pddl  solutionwithhistory.txt  travel-2.pddl  travel-around.pddl  travel-to-la.pddl  travel_domain.pddl  (+1 more)
Planner/: Flaws  Flaws.py  Planner.py
analysis/: 1 plan, decomp, incentivizing, full traversal.txt  1 plan, decomp, just add 1 heuristic.txt  5 plans, decomp, add 1 for all substeps too.txt  5 plans, decomp, incentivizing heuristic.txt  5 plans, decomp, just add 1 heuristic.txt  8 plans, decomp baseline (add 1 for all substeps).txt  8 plans, decomp just add 1 heuristic.txt  8 plans, decomp, incentivizing heuristic.txt  8 plans, primitive planning.txt  8_plan_analysis.xlsx  Full_analysis.xlsx  travel problems, 8 X 8, DJA1.txt  travel problems, 8 X 8, PO.txt
domains/: ark-discourse-tests-problem.pddl  ark-discourse-tests.pddl  ark-domain-decomp-two.pddl  ark-domain-decomp.pddl  ark-domain-outcomes.pddl  ark-domain.pddl  ark-problem-decomp.pddl  ark-problem-outcomes.pddl  ark-problem.pddl  ark-requirements-domain.pddl  ark-requirements-problem.pddl  danger_domain.pddl  danger_problem.pddl  danger_solution.pddl  h1.pddl  h1p1.pddl  mini-indy-domain.pddl  mini-indy-problem.pddl  threesolutions.txt  travel_domain.pddl  western-domain.lsp
examples/: simple_blocks.py
pddl/: parser.py  pddl.py  test_parser_drw.py  test_parser_drw.txt  test_tree_visitor.py  tree_visitor.py
preliminary_results/: logged_output_Dinctvz_travel_1.txt  logged_output_PO_travel1.txt  travel problems, 8 X 8, DA1.txt  travel problems, 8 X 8, Dinctvz.txt  travel-3.pddl  travel-4.pddl  travel-5.pddl  travel-6.pddl  travel-7.pddl  travel-8.pddl  travel_domain.pddl
pydpocl/: __init__.py  cli.py
search/: searchspace.py
tests/: __init__.py  test_literal.py  test_plan.py  test_step.py  testing_consentingActors.py  testing_internalConsistency.py  testing_plans.py
(+18 files in other folders)
